--- a/doc/manual/algorithms.tex
+++ b/doc/manual/algorithms.tex
@@ -1,3 +1,4 @@
+\addtocontents{toc}{\protect\vfill\newpage}  %ToC would split algorithms chapter otherwise
 \chapter{Algorithms} \label{chap:algorithms}
 The iterations and data accessors described in the previous Chapters allow for a plethora of algorithms.
 Most of them make use of basic functionalities such as the inner product of vectors, or the volume of a $n$-cell.
