--- a/doc/manual/contributors.tex
+++ b/doc/manual/contributors.tex
@@ -17,11 +17,12 @@ Josef Weinbub \\
 
 \textit{Contributors:}\\ 
 
-Peter Lagger
+Peter Lagger \\
+Markus Bina
 
 
 %\vspace{7.0cm}
-\vspace{3.5cm}
+\vspace{3.0cm}
 
 Institute for Microelectronics\newline
 Vienna University of Technology\newline
