--- a/doc/manual/io.tex
+++ b/doc/manual/io.tex
@@ -137,7 +137,7 @@ for (size_t i=0; i<get_scalar_data_on_vertices(reader).size(); ++i)
 Since {\ViennaGrid} does not provide any visualization capabilities, the recommended procedure for visualization is 
 to write to one of the file formats discussed below and use one of the free visualization suites for that purpose.
 
-\TIP{File writer contributions are always welcome!}
+%\TIP{File writer contributions are always welcome!}
 
  \subsection{OpenDX}
  {\OpenDX} \cite{opendx} is an open source visualization software package based on IBM's Visualization Data Explorer.
