--- a/doc/manual/orientations.tex
+++ b/doc/manual/orientations.tex
@@ -26,7 +26,7 @@ The first entry has precedence over the second entry, etc.
 \section{Simplices}
 \begin{figure}[tb]
 \centering
- \includegraphics[width=0.95\textwidth]{figures/orientation-simplex.eps}
+ \includegraphics[width=0.7\textwidth]{figures/orientation-simplex.eps}
  \caption{Reference orientations of a triangle (left) and a tetrahedron (right).}
  \label{fig:orientation-simplex}
 \end{figure}
@@ -56,7 +56,7 @@ the boundary $k$-cells of a triangle and a tetrahedron are thus ordered as follo
 \section{Hypercube}
 \begin{figure}[tb]
 \centering
- \includegraphics[width=0.95\textwidth]{figures/orientation-hypercube.eps}
+ \includegraphics[width=0.7\textwidth]{figures/orientation-hypercube.eps}
  \caption{Reference orientations of a quadrilateral (left) and a hexahedron (right).}
  \label{fig:orientation-hypercube}
 \end{figure}
@@ -73,9 +73,8 @@ For reference, the edges and faces of a quadrilateral and a hexahedron are order
   \hline
               & Quadrilateral                      & Hexahedron   \\
   \hline
-   $1$-cells  & $[0,1]$, $[0,2]$, $[1,3]$, $[2,3]$ & $[0,1]$, $[0,2]$, $[0,4]$, $[1,3]$, \\
-              &                                    & $[1,5]$, $[2,3]$, $[2,6]$, $[3,7]$, \\
-              &                                    & $[4,5]$, $[4,6]$, $[5,7]$, $[6,7]$ \\
+   $1$-cells  & $[0,1]$, $[0,2]$, $[1,3]$, $[2,3]$ & $[0,1]$, $[0,2]$, $[0,4]$, $[1,3]$, $[1,5]$, $[2,3]$, \\
+              &                                    & $[2,6]$, $[3,7]$, $[4,5]$, $[4,6]$, $[5,7]$, $[6,7]$ \\
   \hline
    $2$-cells  & $[0,1,2,3]$                        & $[0,1,2,3]$, $[0,1,4,5]$, $[0,2,4,6]$, \\
               &                                    & $[1,3,5,7]$, $[2,3,6,7]$, $[4,5,6,7]$ \\
