Fixed typos in manual, first preparations towards release 1.0.1.

--- a/doc/manual/contributors.tex
+++ b/doc/manual/contributors.tex
@@ -2,7 +2,7 @@
 \clearpage
 
 \begin{tabular}{ll}
-Copyright {\copyright} 2011 & Institute for Microelectronics, \\
+Copyright {\copyright} 2011-2012 & Institute for Microelectronics, \\
                             & Institute for Analysis and Scientific Computing, TU Wien.
 \end{tabular}
 
