--- a/doc/manual/viennagrid.tex
+++ b/doc/manual/viennagrid.tex
@@ -57,7 +57,7 @@
 \newcommand{\OpenCL} {\texttt{OpenCL}}
 \newcommand{\ViennaData} {\texttt{ViennaData}}
 \newcommand{\ViennaGrid} {\texttt{ViennaGrid}}
-\newcommand{\ViennaGridversion} {\texttt{ViennaGrid 1.0.0}}
+\newcommand{\ViennaGridversion} {\texttt{ViennaGrid 1.0.1}}
 \newcommand{\ViennaGridminorversion} {\texttt{ViennaGrid 1.0.x}}
 \newcommand{\Boost} {\texttt{Boost}}
 \newcommand{\ublas} {\texttt{ublas}}
@@ -93,7 +93,7 @@
 
 \include{introduction} %DONE
 \include{installation} %DONE
-\include{entities}     %DONE, but updates required
+\include{entities}     %DONE
 \include{domainconfig} %DONE
 \include{domainsetup}  %DONE
 \include{iterators}    %DONE
@@ -101,7 +101,7 @@
 \include{algorithms}   %DONE
 \include{io}           %DONE
 %\include{benchmarks}  %Will be added in some later release. A single day has 24 hours only ;-)
-\include{internals}
+\include{internals}    %DONE
 \include{design-decisions} %DONE
 
 \appendix
