Updated documentation: Added note at beginning of each chapter that description is outdated.

--- a/doc/manual/algorithms.tex
+++ b/doc/manual/algorithms.tex
@@ -1,5 +1,8 @@
 \addtocontents{toc}{\protect\vfill\newpage}  %ToC would split algorithms chapter otherwise
 \chapter{Algorithms} \label{chap:algorithms}
+
+ \NOTE{This description has not been updated for ViennaGrid 1.1.0 yet!}
+ 
 The iterations and data accessors described in the previous Chapters allow for a plethora of algorithms.
 Most of them make use of basic functionalities such as the inner product of vectors, or the volume of a $n$-cell.
 {\ViennaGrid} ships with a number of such basic tools, which are listed in Tab.~\ref{tab:algorithms} and discussed in the following.
