--- a/doc/manual/contributors.tex
+++ b/doc/manual/contributors.tex
@@ -2,15 +2,16 @@
 \clearpage
 
 \begin{tabular}{ll}
-Copyright {\copyright} 2011-2012 & Institute for Microelectronics, \\
+Copyright {\copyright} 2011-2013 & Institute for Microelectronics, \\
                             & Institute for Analysis and Scientific Computing, TU Wien.
 \end{tabular}
 
-\vspace{3.5cm}
+\vspace{2.5cm}
 
 \textit{Main authors:}\\ 
 
 Karl Rupp (Project Head)\\
+Florian Rudol
 Josef Weinbub \\
 
 \vspace{1cm}
