--- a/doc/manual/data.tex
+++ b/doc/manual/data.tex
@@ -1,4 +1,8 @@
 \chapter{Data Storage and Retrieval} \label{chap:data}
+
+ \NOTE{This description has not been updated for ViennaGrid 1.1.0 yet!}
+ 
+
 One of the central operations whenever dealing with meshes is the storage and the retrieval of data.
 A common approach is to model vertices, edges and the like as separate classes and add data members to them.
 {\ViennaGrid} does not follow this approach for three reasons:
