--- a/doc/manual/design-decisions.tex
+++ b/doc/manual/design-decisions.tex
@@ -1,4 +1,8 @@
 \chapter{Design Decisions} \label{chap:design}
+
+ \NOTE{This description has not been updated for ViennaGrid 1.1.0 yet!}
+ 
+
 In this chapter the various aspects that have lead to {\ViennaGrid} in the present form are documented.
 The discussion focuses on key design decisions mostly affecting usability and convenience for the library user,
 rather than discussing programming details invisible to the library user. Since the design decisions also reflect
