--- a/doc/manual/domainconfig.tex
+++ b/doc/manual/domainconfig.tex
@@ -1,5 +1,8 @@
 \chapter{Domain and Element Configuration} \label{chap:domainconfig}
 
+ \NOTE{This description has not been updated for ViennaGrid 1.1.0 yet!}
+ 
+
 A domain and all its topological elements as well as the underlying geometric space are specified in a common configuration class.
 The setup of such a configuration class is explained in detail in Section \ref{sec:config-class}.
 
