--- a/doc/manual/domainsetup.tex
+++ b/doc/manual/domainsetup.tex
@@ -1,4 +1,8 @@
 \chapter{Domain and Segment Setup} \label{chap:domainsetup}
+
+ \NOTE{This description has not been updated for ViennaGrid 1.1.0 yet!}
+ 
+
 This chapter explains how a {\ViennaGrid} domain can be filled with cells. Since this
 is a necessary step in order to do anything useful with {\ViennaGrid}, it is explained in detail in the following.
 Existing file readers and writers are explained in Chapter \ref{chap:io}.
