--- a/doc/manual/entities.tex
+++ b/doc/manual/entities.tex
@@ -1,4 +1,8 @@
 \chapter{Main Entities} \label{chap:entities}
+
+ \NOTE{This description has not been updated for ViennaGrid 1.1.0 yet!}
+ 
+
 In the following, the main entities of ViennaGrid are explained. The nomenclature essentially follows the convention from topology and can partly be found in other mesh libraries. Note that the purpose of this manual is not to give exact definitions from the field of geometry or topology, but rather to establish the link between abstract concepts and their representation in code within {\ViennaGrid}. First, geometrical objects are discussed, then topological objects and finally complexes of topological objects.
 
 \begin{figure}[tb]
