--- a/doc/manual/internals.tex
+++ b/doc/manual/internals.tex
@@ -1,4 +1,8 @@
 \chapter{Library Internals} \label{chap:internals}
+
+ \NOTE{This description has not been updated for ViennaGrid 1.1.0 yet!}
+ 
+
 Details about the internals of {\ViennaGrid} will be given in the following. 
 They should aid developers to extend the library with additional features
 and to understand the internal data structures used. 
