--- a/doc/manual/iterators.tex
+++ b/doc/manual/iterators.tex
@@ -1,4 +1,8 @@
 \chapter{Iterators} \label{chap:iterators}
+
+ \NOTE{This description has not been updated for ViennaGrid 1.1.0 yet!}
+ 
+
 The (possibly nested) iteration over $n$-cells of a mesh is one of the main ingredients for a plethora of algorithms.
 Consequently, {\ViennaGrid} is designed such that these iterations can be carried out in a unified and flexible, yet efficient manner.
 
