--- a/doc/manual/io.tex
+++ b/doc/manual/io.tex
@@ -1,4 +1,8 @@
 \chapter{Input/Output} \label{chap:io}
+
+ \NOTE{This description has not been updated for ViennaGrid 1.1.0 yet!}
+ 
+
 This chapter deals with the typical input and output operations: Reading a mesh from a file, and writing a mesh to a file.
 In order not to give birth to another mesh file format, {\ViennaGrid} does not bring its own file format. 
 Instead, the library mainly relies on the XML-based VTK \cite{VTK} file format \cite{VTKfileformat}.
