--- a/doc/manual/license.tex
+++ b/doc/manual/license.tex
@@ -1,7 +1,7 @@
 
 \chapter{License} 
 
-Copyright (c) 2011, Institute for Microelectronics and Institute for Analysis and Scientific Computing, TU Wien
+Copyright (c) 2011-2013, Institute for Microelectronics and Institute for Analysis and Scientific Computing, TU Wien
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
