--- a/doc/manual/refinement.tex
+++ b/doc/manual/refinement.tex
@@ -1,4 +1,8 @@
 \chapter{Main Entities of ViennaGrid} \label{chap:entities}
+
+ \NOTE{This description has not been updated for ViennaGrid 1.1.0 yet!}
+ 
+
 In the following, the main entities of ViennaGrid are explained. 
 
 \begin{figure}[tb]
