--- a/doc/manual/contributors.tex
+++ b/doc/manual/contributors.tex
@@ -11,7 +11,7 @@ Copyright {\copyright} 2011-2013 & Institute for Microelectronics, \\
 \textit{Main authors:}\\ 
 
 Karl Rupp (Project Head)\\
-Florian Rudol
+Florian Rudolf \\
 Josef Weinbub \\
 
 \vspace{1cm}
